# ipasir2

./: .gitignore  CMakeLists.txt  IDEAS.md  INTRO.md  OPTIONS.md  README.md  ipasir.h  ipasir2.h  ipasir2cadical.cc  ipasir2cms.cc  ipasir2ipasir.cc  ipasir2ipasir.h  load_solvers.cmake  print_all_options.cc  test.cc
applications/: icnf.c
applications/genipa/: genipaessentials.cpp
applications/genipa/pblib/: CMakeLists.txt  INSTALL  PBConfig.cpp  VectorClauseDatabase.cpp  auxvarmanager.cpp  formula.cpp  pbconstraint.cpp
applications/genipa/pblib/BasicPBSolver/: SATSolverClauseDatabase.cpp  SATSolverClauseDatabase.h  main.cpp
applications/genipa/pblib/encoder/: Encoder.cpp  adderencoding.cpp  amo.cpp  binary_amo.cpp  cardencoding.cpp  sorting_merging.cpp
article/: .gitignore  ios1.bst  iosart2x.cfg  iosart2x.cls  iosart2x.tex  ipasir2.bib  ipasir2.tex
buildutils/: doxygen.cmake  doxygen_config.in  load_solvers.cmake
legacy/: CMakeLists.txt  ipasir1ipasir2.cc  ipasir2ipasir1.cc
legacy/genipa/: README  genipaessentials2.cpp
legacy/genipa/pblib/: CMakeLists.txt  IncrementalData.cpp  PBParser.cpp  clausedatabase.cpp  incpbconstraint.cpp
legacy/genipa/pblib/encoder/: BDD_Seq_Amo.cpp  SortingNetworks.cpp  bimander_amo_encoding.cpp  commander_encoding.cpp  k-product.cpp  naive_amo_encoder.cpp
src/clients/: CMakeLists.txt  c_client.c  inspect.cc  ipasir2_util.h  test.cc  test_notify.cc
test/: test.cc  test_notify.cc
tests/: print_all_options.cc
util/: inspect.cc  ipasir2_util.h  print_all_options.cc
